# japan-data-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml  start_mcp.bat
docs/: RECORDING_GUIDE.md
scripts/: generate_municipalities.py
src/japan_data_mcp/: __init__.py  __main__.py  cli.py  server.py
src/japan_data_mcp/corp/: __init__.py  client.py  models.py
src/japan_data_mcp/data/: municipalities.json
src/japan_data_mcp/estat/: __init__.py  client.py  formatter.py  models.py
src/japan_data_mcp/invoice/: __init__.py  client.py  models.py
src/japan_data_mcp/presets/: __init__.py  population.py  regional.py
src/japan_data_mcp/realestate/: __init__.py  client.py  formatter.py  models.py
src/japan_data_mcp/utils/: __init__.py  area_codes.py  env.py  field_codes.py
tests/: test_cli.py  test_client.py  test_corp_client.py  test_formatter.py  test_invoice_client.py  test_mcp_e2e.py  test_presets.py  test_realestate_client.py  test_server.py
